description in json asia, africa

--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
             <div class="boogeyman-name" id="boogeymanName"></div>
             <div class="boogeyman-image" id="boogeymanImage"></div>
             <div class="boogeyman-info">
+                <div class="boogeyman-header" >Country:</div>
                 <p id="boogeymanCountry"></p>
                 <div class="boogeyman-header" >Description:</div>
-                <div class="boogeyman-description"></div>
+                <p class="boogeyman-description"></p>
                 
             
         </div>
