recode script js

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 
     <div class="main-container">
-        <div class="map-container" id="mapContainer"></div>
+        <div class="mapContainer" id="mapContainer"></div>
         
         <div class="boogeyman-card" id="boogeymanCard">
 
