update: dropdown menus

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 
             <div class="country-selector">
                 <label for="countryDropdown">Select a Country:</label>
-                <select id="countryDropdown" onchange="selectCountry()"></select>
+                <select id="countryDropdown"></select>
+
           </div>
 
           <div class="attribute-selector">
