update: repair dropdown reset  and highlight on the map

--- a/index.html
+++ b/index.html
@@ -23,14 +23,15 @@
                 <select id="countryDropdown"></select>
 
           </div>
+          <div id="countryList"></div>
 
           <div class="attribute-selector">
             <label for="attributeDropdown">Select an Attribute:</label>
-            <select id="attributeDropdown" onchange="selectAttribute()"></select>
+            <select id="attributeDropdown"></select>
         </div>
         <div class="behavior-selector">
             <label for="behaviorDropdown">Select a Behavior:</label>
-            <select id="behaviorDropdown" onchange="selectBehavior()"></select>
+            <select id="behaviorDropdown"></select>
           </div>
     
 
